force-app/main/default/objects/Product_Cart_Item__c/Product_Cart_Item__c.object-meta.xml
<CustomObject>
    <label>Product Cart Item</label>
    <nameField>
        <displayFormat>CITM-{000000000}</displayFormat>
        <label>Product Cart Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Cart Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>