force-app/main/default/objects/Product_Cart_Item__c/fields/Product_Cart__c.field-meta.xml
<CustomField>
    <fullName>Product_Cart__c</fullName>
    <label>Product Cart</label>
    <referenceTo>Product_Cart__c</referenceTo>
    <relationshipLabel>Product Cart Items</relationshipLabel>
    <relationshipName>Product_Cart_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>