force-app/main/default/objects/Product_Cart_Item__c/fields/Product_Cart_Product__c.field-meta.xml
<CustomField>
    <fullName>Product_Cart_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Cart Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Cart Items</relationshipLabel>
    <relationshipName>Product_Cart_Products</relationshipName>
    <type>Lookup</type>
</CustomField>